# GAMES101HWK

./: README.md
Assignment1/: README.md  READNE.md
Assignment1/代码框架/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment2/: README.md
Assignment2/代码框架/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment3/: README.md
Assignment3/Code/: CMakeLists.txt  Texture.hpp  main.cpp  rasterizer.cpp
Assignment4/: README.md
Assignment4/code/: CMakeLists.txt  main.cpp
Assignment5/: README.md
Assignment5/Code/: CMakeLists.txt  Renderer.cpp  Triangle.hpp
Assignment6/: README.md
Assignment6/Assignment6/: BVH.cpp  Bounds3.hpp  Renderer.cpp  Triangle.hpp  Vector.hpp  main.cpp
Assignment7/: README.md
Assignment7/Assignment7/: BVH.cpp  Bounds3.hpp  Material.hpp  Renderer.cpp  Scene.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp  main.cpp
Assignment7/IMAGE/: binary.ppm
Assignment8/: CMakeLists.txt  README.md
Assignment8/src/: rope.cpp
